changes to Influences in the texture panel don't update correctly. #34759

Closed
opened 2013-03-24 21:50:57 +01:00 by Glenn Melenhorst · 5 comments

%%%--- Operating System, Graphics card ---
windows7

- Blender version with error, and version that worked ---

2.66a

- Short description of error ---

When setting up textures to drive hair in cycles, the texture tab does not update the influence settings correctly

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

1/ Open the blend I posted.
2/ go to the texture tab.
3/select ParticleSystem - Circle note what influences are set.
4/Select ParticleSystem_Cross. It has length set. now change the influences to something random.
5/reselect ParticleSystem_Circle and its influences stay the same as ParticleSystem_Cross.
The influences don't update as you change them.

%%%

%%%--- Operating System, Graphics card --- windows7 - Blender version with error, and version that worked --- 2.66a - Short description of error --- When setting up textures to drive hair in cycles, the texture tab does not update the influence settings correctly - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1/ Open the blend I posted. 2/ go to the texture tab. 3/select ParticleSystem - Circle note what influences are set. 4/Select ParticleSystem_Cross. It has length set. now change the influences to something random. 5/reselect ParticleSystem_Circle and its influences stay the same as ParticleSystem_Cross. The influences don't update as you change them. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Brecht: if render engine is set to "Internal", the particles update to show the active texture. For cycles not.
It also doesn't render it in Cycles, unless you switch back to internal and back to cycles.

Glenn: hey good to see you here! How's Blender life at Iloura?%%%

%%%Brecht: if render engine is set to "Internal", the particles update to show the active texture. For cycles not. It also doesn't render it in Cycles, unless you switch back to internal and back to cycles. Glenn: hey good to see you here! How's Blender life at Iloura?%%%

%%%Good Ton,

I just love showing our lighting department GPU Cycles, particularly as all those Autodesk sneak peek videos for 2014 are so underwhelming :)

Keep up the amazing work, all of you!

Glenn%%%

%%%Good Ton, I just love showing our lighting department GPU Cycles, particularly as all those Autodesk sneak peek videos for 2014 are so underwhelming :) Keep up the amazing work, all of you! Glenn%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34759
No description provided.