Fix #34759: cycles texture influence for particles not shown correct when switching to a different texture slot.